fix spacing issue between assignment groups
fix issue assignment groups in the assignment index page no longer
have spacing between each other

fixes EVAL-3787
flag=none

Test Plan:
- have multiple assignment groups
- as the teacher go to the assignment index view
- confirm that there is spacing between the assignment groups

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/334907
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Cameron Ray <cameron.ray@instructure.com>
Product-Review: Cameron Ray <cameron.ray@instructure.com>

--- a/app/stylesheets/components/_item-groups-condensed.scss
+++ b/app/stylesheets/components/_item-groups-condensed.scss
@@ -35,9 +35,10 @@
 }
 
 .item-group-condensed {
-  margin-top: 24px;
+  padding: 9px;
 
   .ig-header {
+    margin-top: 15px;
     background-color: $ic-bg-light-neutral;
     border: 1px solid $ic-border-light;
     padding: direction-sides($ic-sp $ic-sp*0.5); // match the ig-list and ig-row that appear below the header
